<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SecureIntro</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Secure Introductions</string>
    <string name="thier_accept_Profiles">Receive Profile</string>
    <string name="thier_view_Profiles">View Profiles</string>
    <string name="mine_send_Profile">Share Profile</string>
    <string name="mine_view_Profile">View Profiles</string>
    <string name="mine_create_Profile">Create Profile</string>
    <string name="exit_Profiles">Exit</string>
    <string name="title_activity_accept_profile">AcceptProfile</string>
    <string name="title_Mine">Mine</string>
    <string name="title_Theirs">Theirs</string>
    <string name="title_bar">___________________________________________________</string>
    <string name="accept_profile">Accept Profile</string>
    <string name="readqr_profile">Read QR Code</string>
    <string name="readfile_profile">Read File</string>
    <string name="exit_profile">Exit</string>
    <string name="title_activity_accept_profile_connect_server">AcceptProfileConnectServer</string>
    <string name="connect_server">Connecting to Server</string>
    <string name="verify_publickey">Verifying public Key</string>
    <string name="public_key">6d42b3ef7342c32a33df8</string>
    <string name="back">Next</string>
    <string name="title_activity_accept_profile_server_res">AcceptProfileServerRes</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="name">Bjarne Stroustrup</string>
    <string name="email">+1-543-234-543</string>
    <string name="addedstrous">Added: 22 June 2013</string>
    <string name="isthistheperson">Is this the person</string>
    <string name="title_activity_view_profiles">ViewProfiles</string>
    <string name="namejames">james gosling</string>
    <string name="emailjames">james.gosling@sun.com</string>
    <string name="addedjames">Added: 2 Jan 2012</string>
    <string name="updatedjames">Updated: 10 Oct 2013</string>
    <string name="namesteve">Steve Jobs</string>
    <string name="emailsteve">steve.jobs@apple.com</string>
    <string name="addedsteve">Added: 14 Feb 2013</string>
    <string name="title_activity_mine_create_profile">MakeMyProfile</string>
    <string name="mineName">Name</string>
    <string name="minemail">Phone</string>
    <string name="minekeypair">key Pair</string>
    <string name="minekeypairGenerate">Generate</string>
    <string name="minekeypairImport">Import</string>
    <string name="minephoto">Photo</string>
    <string name="mineupload">Upload</string>
    <string name="minecancel">Cancel</string>
    <string name="minecreateprofile">Create Profile</string>
    <string name="title_activity_mine_view_profile">MineViewProfile</string>
    <string name="mineUpdate">Update</string>
    <string name="mineProfile">Profile</string>
    <string name="mineRevert">Revert</string>
    <string name="mineviewProfile">View Profile</string>
    <string name="mineenterpfoile">Enter Profile Name</string>
    <string name="minepersonal">Personal</string>
    <string name="mineOfficial">Official</string>
    <string name="mineFriends">Friends</string>
    <string name="title_activity_mine_send_profile">MineSendProfile</string>
    <string name="minesendprofile">Send My Profile</string>
    <string name="minesendprofileWhich">Which Profile?</string>
    <string name="minesendprofilehow">Send How?</string>
    <string name="minesendprofileQRCode">QR Code</string>
    <string name="minesendprofileNFC">NFC</string>
    <string name="minesendprofilesend">Send</string>
    <string name="title_activity_mine_qrcode">MyProfile</string>
<string name="minescanning"> Show your screen for scanning</string>
<string name="mineDone">Done</string>
</resources>
